crates/karva/tests/it/snapshots/it__basic__unsupported_class_method.snap
---
source: crates/karva/tests/it/basic.rs
info:
  program: karva
  args:
    - test
    - "test.py::TestCheckout::test_total"
  env:
    KARVA_MAX_PARALLELISM: "1"
    VIRTUAL_ENV: /Users/matthew/Library/Caches/karva/test-cache/shared-venv-bef963c430d64eb1-py3.13-30cc6f7a1b95fcf1
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
karva failed
  Cause: test selector `<temp_dir>/test.py::TestCheckout::test_total` is unsupported: Karva only runs top-level test functions; use `path.py::test_function` instead of a class or nested selector
